[ADD] 增加打开关闭方法
增加打开关闭方法

--- a/src/less/nui-data-picker.less
+++ b/src/less/nui-data-picker.less
@@ -31,10 +31,17 @@ html, body {
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0;
+  top: 100%;
+  opacity:0;
+  -moz-opacity: 0;
   left: 0;
   z-index: @date-picker-z-index;
   background: @date-picker-background;
+
+  .nui-date-picker-mask{
+    width:100%;
+    height:100%;
+  }
 
   .nui-date-picker-container {
     position: absolute;
