[FIX] 解决无法自定义标题字体大小问题
解决无法自定义标题字体大小问题

--- a/src/less/nui-data-picker.less
+++ b/src/less/nui-data-picker.less
@@ -74,6 +74,10 @@ html, body {
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
+
+              span{
+                font-size:inherit;
+              }
             }
           }
         }
